--- a/_css/style.css
+++ b/_css/style.css
@@ -23,7 +23,7 @@ header {
 
 .logo h1 {
     font-size: 1.75em;
-    font-weight: 200;
+    font-weight: normal;
     color: rgb(255, 255, 255);
     text-shadow: 1px 1px 1px black;
 }
@@ -68,7 +68,7 @@ header {
 
 .text-info h1 {
     font-size: 2.875em;
-    font-weight: 200;
+    font-weight: normal;
     line-height: 1;
 }
 
@@ -111,7 +111,7 @@ header {
     display: flex;
     max-width: 960px;
     margin: 0 auto;
-    margin-bottom: 50px;
+    margin-bottom: 20px;
 }
 
 .info-box a {
@@ -146,7 +146,7 @@ header {
 .box-corpo h1 {
     color: #333333;
     font-size: 2em;
-    font-weight: 150;
+    font-weight: normal;
     text-shadow: 1px 1px 1px #7a7a7a;
     padding: 10px 0px;
 }
@@ -155,4 +155,38 @@ header {
     color: #979797;
     font-size: 0.75em;
     
+}
+/* .div-bg {
+    display: flex;
+    justify-content: center;
+    
+}
+
+.divisoria h1 {
+    background-color: #303030;
+    font-size: 2em;
+    color: white;
+    text-align: center;
+    padding: 8px 15px;
+    font-weight: normal;
+    border-radius: 15px;
+    
+} */
+
+.titulo {
+    margin: 0 auto;
+    height: 3px;
+    background-color: #303030;
+    text-align: center;
+    max-width: 942px;
+}
+.titulo span {
+    color: white;
+    padding: 8px 15px;
+    font-size: 2em;
+    font-weight: normal;
+    border-radius: 10px;
+    background-color: #303030;
+    position: relative;
+    top: -0.5em;
 }
