--- a/_css/style.css
+++ b/_css/style.css
@@ -154,13 +154,13 @@ header {
 
 .corpo {
     background-color: #660000;
+    padding-bottom: 50px;
 }
 
 .info-box {
     display: flex;
     max-width: 960px;
     margin: 0 auto;
-    margin-bottom: 20px;
 }
 
 .info-box a {
@@ -178,7 +178,7 @@ header {
     background-color: white;
     padding: 15px 30px;
     margin: 0px 10px;
-    margin-bottom: 40px;
+    margin-bottom: 60px;
     text-align: center;
     border-radius: 5px;
 }
@@ -213,6 +213,7 @@ header {
     background-color: #303030;
     text-align: center;
     max-width: 942px;
+    margin-bottom: 50px;
 }
 .div-bg span {
     color: white;
@@ -224,3 +225,170 @@ header {
     position: relative;
     top: -0.5em;
 }
+
+.gallery {
+    display: flex;
+    max-width: 960px;
+    margin: 0 auto;
+}
+
+.grid-container {
+    display: grid;
+    margin: 0 auto;
+    grid-template-areas: 
+    'item1 item1 item1'
+    'item1 item1 item1' ;
+    gap: 20px;
+}
+
+.grid-container img {
+    border: 5px solid #FFFFFF;
+}
+
+.grid-container img:hover {
+    border: 5px solid #76c38f;
+}
+
+.grid-container .legenda {
+    color: white;
+    text-align: center;
+}
+
+.final {
+    padding: 40px 0px;
+    background-color: #303030;
+}
+
+.menu-footer {
+    display: flex;
+    margin: 0 auto;
+    justify-content: space-between;
+    height: auto;
+    max-width: 960px;
+}
+
+.sec1,
+.sec2,
+.sec3,
+.sec4{
+    flex: 1;
+    margin: 10px
+}
+
+.sec1 h1{
+    font-size: 1em;
+    color: #FFFFFF;
+    padding-bottom: 35px;
+}
+
+.sec1 h2 {
+    font-size: 0.8125em;
+    color: #76c38f;
+}
+
+.sec1 h3 {
+    font-size: 0.725em;
+    color: #666666;
+    padding: 16px 0px;
+}
+
+.sec1 span {
+    font-size: 1em;
+    color: #76c38f;
+}
+
+.sec1 h4 {
+    font-size: 0.725em;
+    color: #979797;
+    padding-bottom: 16px;
+}
+
+.sec1 p {
+    font-size: 0.8125em;
+    color: #979797;
+    padding-bottom: 18px;
+}
+
+.sec1 a {
+    text-decoration: none;
+    font-size: 0.8125em;
+    color: #76c38f;
+}
+
+.sec2 h1{
+    font-size: 1em;
+    color: #FFFFFF;
+    padding-bottom: 35px;
+}
+
+
+.sec2 ul { 
+    list-style: none;
+}
+
+.sec2 span {
+    color: #979797;
+}
+
+.sec2 li {
+    text-decoration: none;
+    font-size: 0.8125em;
+    color: #76c38f;
+    padding-left: 5px;
+    padding-bottom: 10px;
+    border-bottom: 1px solid #404040;
+}
+
+.sec3 h1{
+    font-size: 1em;
+    color: #FFFFFF;
+    padding-bottom: 35px;
+}
+
+.sec3 p {   
+    font-size: 0.840em;
+    color: #979797;
+    padding-bottom: 18px;
+}
+
+.sec3 span {
+    color: #76c38f;
+}
+
+.sec4 h1{
+    font-size: 1em;
+    color: #FFFFFF;
+    padding-bottom: 35px;
+}
+
+
+.sec4 input{ 
+    width: 220px;
+    resize: none;
+    margin-bottom: 10px;
+    background-color: #222222;
+    border: 1px solid #222222;
+    border-radius: 10px;
+    padding: 8px;
+}
+
+.sec4 textarea {
+    width: 220px;
+    resize: none;
+    background-color: #222222;
+    border: 1px solid #222222;
+    border-radius: 10px;
+    margin-bottom: 10px;
+    padding: 8px;
+    height: 80px;
+}
+
+.sec4 button {
+    font-size: 0.75em;
+    color: #303030;
+    font-weight: 600;
+    padding: 13px 10px;
+    border-radius: 10px;
+    background-color: #76c38f;
+}
+
