--- a/_css/style.css
+++ b/_css/style.css
@@ -52,9 +52,7 @@ header {
     border-radius: 10px;
 }
 
-.menu a:hover {
-    background-color: #76c38f;
-}
+
 
 .banner {
     display: flex;   
@@ -183,16 +181,6 @@ header {
     border-radius: 5px;
 }
 
-.box-corpo:hover{
-    background-color: #76c38f;
-}
-
-.box-corpo:hover h1,
-.box-corpo:hover p{
-    color: white;
-    text-shadow: 0px 1px 1px #7a7a7a;
-}
-
 .box-corpo h1 {
     color: #333333;
     font-size: 2em;
@@ -241,17 +229,24 @@ header {
     gap: 20px;
 }
 
-.grid-container img {
+.grid-container .item1 {
+    position: relative;
+    width: 100%;
     border: 5px solid #FFFFFF;
 }
 
-.grid-container img:hover {
-    border: 5px solid #76c38f;
-}
+
 
 .grid-container .legenda {
-    color: white;
+    position: absolute;
+    width: 100%;
+    bottom: 0px;
+    left: 0px;
     text-align: center;
+    background-color: #151515;
+    color: #FFF;
+    padding: 8px;
+    
 }
 
 .final {
@@ -365,6 +360,8 @@ header {
 .sec4 input{ 
     width: 220px;
     resize: none;
+    outline: none;
+    color: #979797;
     margin-bottom: 10px;
     background-color: #222222;
     border: 1px solid #222222;
@@ -375,6 +372,8 @@ header {
 .sec4 textarea {
     width: 220px;
     resize: none;
+    outline: none;
+    color: #979797;
     background-color: #222222;
     border: 1px solid #222222;
     border-radius: 10px;
